# python_template

./: .commitlint.config.js  .commitlintrc.js  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  commitlint.config.js  dir_tree.md  docker-compose.yml  environment.sh  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  renovate.json  trivy.yaml
.claude/: README.md  settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/: protect-config.sh
.claude/rules/: ddd-architecture.md  ddd-context-boundary-design.md  ddd-domain-design.md  exception-architecture.md  python-conventions.md  python-naming-conventions.md  security.md  test-strategy.md  workflow.md
.claude/skills/code-quality/: SKILL.md
.claude/skills/create-migration/: SKILL.md
.claude/skills/design-patterns/: SKILL.md
.claude/skills/lint-fix/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/security/: SKILL.md
.claude/skills/test-code-quality/: SKILL.md
.claude/skills/unit-testing-strategy/: SKILL.md
.github/: labeler.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: auto-approve-renovate.yml  block-fixup.yml  ci.yml  claude-code-review.yml  labeler.yml  trivy.yml
Dockerfile.config/: Dockerfile
dockerfile.config/: Dockerfile
docs/: index.md
docs/adr/: README.md  template.md
docs/adr/current/: 0001-domain-attrs-dto-pydantic.md  0002-app-error-pyramid-rfc9457.md  0003-enum-default-strenum-exception.md  0004-bounded-context-import-linter.md  0005-test-size-classification.md
docs/rules/: ddd-architecture.md  ddd-context-boundary-design.md  ddd-domain-design.md  exception-architecture.md  index.md  python-conventions.md  security.md  test-strategy.md  workflow.md
docs/skills/: code-quality.md  create-migration.md  design-patterns.md  index.md  lint-fix.md  run-tests.md  security.md  test-code-quality.md  unit-testing-strategy.md
lint_rules/: attrs_kw_only.py  no_attr_shorthand.py  no_class_pattern.py  no_positional_args.py  no_single_param_star.py  param_line_break.py  use_http_status.py  use_zoneinfo.py
scripts/: generate_github_actions.sh  generate_pyproject.sh  install_system.sh  setEnv.sh  setup_node_project.sh  setup_precommit.sh  setup_python_project.sh  setup_uv_project.sh
src/authors/: models.py  serializers.py  urls.py  views.py
src/authors/domain/entities/: author.py
src/authors/infrastructure/adapters/: fake.py
src/authors/infrastructure/containers/: author.py
src/authors/infrastructure/routing/: urls.py
src/authors/interfaces/deserializers/: author.py
src/authors/interfaces/repositories/: author.py
src/authors/interfaces/serializers/: author.py
src/authors/interfaces/views/: author.py
src/authors/migrations/: 0001_initial.py
src/authors/usecases/: crud.py  protocols.py
src/books/: admin.py  models.py  serializers.py  urls.py  views.py
src/books/entities/: __init__.py  book.py  safe_text.py
src/books/migrations/: 0001_initial.py  0002_alter_book_title.py  0003_book_cover_image.py
src/common/domain/: exceptions.py  validators.py
src/common/domain/entities/: base.py  exceptions.py  supertype.py
src/common/infrastructure/: exception_handler.py
src/common/infrastructure/adapters/: exceptions.py  supertype.py
src/common/infrastructure/containers/: di.py
src/common/infrastructure/factories/: exceptions.py  logger.py  supertype.py
src/common/interfaces/: problem_details.py
src/common/interfaces/repositories/: exceptions.py  supertype.py
src/common/interfaces/views/: crud.py
src/common/usecases/: crud.py  protocols.py
src/config/: api_v1.py  settings.py  urls.py
src/config/management/commands/: ensure_bucket.py
src/config/settings/: base.py  dev.py  prod.py
src/my_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/notifications/domain/: event_type.py  events.py  notification_channel.py  notification_log.py  notification_status.py  results.py
src/notifications/infrastructure/adapters/: console.py  discord.py  elasticsearch.py  fake.py
src/notifications/infrastructure/containers/: notificaton.py
src/notifications/infrastructure/routing/: urls.py
src/notifications/interfaces/serializers/: notification_log.py
src/notifications/interfaces/views/: notification_log.py
src/notifications/usecases/: notify.py  protocols.py  query.py
tasks/: lessons.md  todo.md
tests/: conftest.py
tests/functional/: conftest.py  test_author_api.py  test_book_api.py  test_functional_dummy.py
tests/functional/authors/: test_author_api.py
tests/functional/books/: test_book_api.py
tests/functional/notifications/: test_notification_log_api.py
tests/integration/: test_integration_dummy.py
tests/integration/notifications/: conftest.py  test_discord.py  test_elasticsearch_adapter.py
tests/linting/: conftest.py  test_attrs_kw_only.py  test_no_attr_shorthand.py  test_no_class_pattern.py  test_no_positional_args.py  test_no_single_param_star.py  test_param_line_break.py  test_use_http_status.py  test_use_zoneinfo.py
tests/unit/: test_models.py  test_serializers.py
tests/unit/authors/: test_crud_usecase.py  test_deserializers.py  test_models.py  test_serializers.py
tests/unit/books/: test_models.py  test_safe_text.py  test_serializers.py
tests/unit/common/: test_entity.py  test_exception_handler.py  test_exceptions.py
tests/unit/config/: test_ensure_bucket.py
tests/unit/notifications/: test_console.py  test_di.py  test_discord.py  test_elasticsearch_adapter.py  test_events.py  test_notification_log.py  test_notify.py  test_query.py  test_results.py
